--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "json-server": "^0.16.2",
     "mini.css": "3.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.4.5",
+    "react-scripts": "^5.0.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
@@ -21,7 +23,7 @@
     "typescript": "4.4.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
